src/test/fun-test/semantic/DeclarationStrictConversion5.java.err
Semantic error: type mismatch - expected INT, got DOUBLE, line 5, pos 19
