src/test/fun-test/semantic/DeclarationStrictConversion5.java
class Main {
    void main() {
        // "сужающее" преобразование, недопустимо
        double foo = 0;
        int bar = foo;
    }
}